Changed height of app to viewport to fix problem with browser overlapping the navbar

--- a/src/components/App.less
+++ b/src/components/App.less
@@ -1,5 +1,5 @@
 html {
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
   overscroll-behavior: none;
 }
@@ -7,7 +7,7 @@ html {
 body {
   margin: 0px;
   font-family: 'Josefin Sans', sans-serif;
-  height: 100%;
+  height: 100vh;
   overflow: auto;
   overscroll-behavior: none;
 }
